--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -20,46 +20,46 @@
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
 <form id="formulario_suscripcion">
   <p>
-    Nombre: <input type="text" name="nombre" placeholder="Nombre">
+    <label for="nombre"> Nombre: </label> <input type="text" name="nombre" placeholder="Nombre" id="nombre">
   </p>
   <p>
-    Apellido: <input type="text" name="apellido" placeholder="Apellido">
+    <label for="apellido"> Apellido: </label> <input type="text" name="apellido" placeholder="Apellido" id="apellido">
   </p>
   <p>
-    Sexo: Masculin <input type="radio" name="sexo" value="masculino">
-          Femenino <input type="radio" name="sexo" value="femenino">
+    Sexo: <label for="masculino"> Masculino </label> <input type="radio" name="sexo" value="masculino" id="masculino">
+    <label for="apellido">Femenino </label> <input type="radio" name="sexo" value="femenino" id="femenino">
   </p>
   <p>
-    Edad:<input type="number" name="edad" placeholder="Edad">
+    <label for="edad">Edad:</label> <input type="number" name="edad" placeholder="Edad" id="edad">
   </p>
   <p>
-    Email: <input type="email" name="email" placeholder="Email">
+    <label for="email">Email: </label> <input type="email" name="email" placeholder="Email" id="email">
   </p>
   <p>
-    Usuario: <input type="text" name="usuario" placeholder="Usuario">
+    <label for="usuario"> Usuario: </label> <input type="text" name="usuario" placeholder="Usuario" id="usuario">
   </p>
   <p>
-    Password: <input type="password" name="pass" placeholder="Password">
+    <label for="password"> Password: </label> <input type="password" name="pass" placeholder="Password" id="password">
   </p>
   <p>
-    Confirmar Password: <input type="password" name="confirmar_pass" placeholder="Password">
+    <label for="confirmar">Confirmar Password: <input type="password" name="confirmar_pass" placeholder="Password" id="confirmar">
   </p>
   <p>
-    Tipo de servicio: Free <input type="checkbox" name="tipo_servicio" value="free">
-                      Standard <input type="checkbox" name="tipo_servicio" value="standard">
-                      Premium <input type="checkbox" name="tipo_servicio" value="premium">
+    Tipo de servicio: <label for="free"> Free </label> <input type="checkbox" name="tipo_servicio" value="free" id="free">
+                      <label for="standard"> Standard <input type="checkbox" name="tipo_servicio" value="standard" id="standard">
+                        <label for="premium"> Premium <input type="checkbox" name="tipo_servicio" value="premium" id="premium">
   </p>
   <p>
-    Tema:
-    <select>
-      <option>Política</option>
-      <option>Negocios</option>
-      <option>Tecnologia</option>
-      <option>Salud</option>
+    <label for="tema"> Tema: </label>
+    <select id="tema">
+      <option value="politica"> Política</option>
+      <option value="negocios">Negocios</option>
+      <option value="tecnologia">Tecnologia</option>
+      <option value="salud">Salud</option>
     </select>
   </p>
   <p>
-    Agregue un comentario: <textarea> </textarea>
+    <label for="cometario">Agregue un comentario: </label> <textarea id="cometario"> </textarea>
   </p>
   <p>
     <button type="button">Boton de Enviar</button>
