--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+        #tituloPrincipal{
+          color: lightblue;
+        }
+        .tituloNoticia{
+          font-size: 30px;
+        }
+    </style>
+
 </head>
-<body>
+<body style="font-family: Tahoma">
 <!--Cree los estilos CSS necesarios para que el texto se visualice en 2 columnas-->
 <header>
     <h1 id="tituloPrincipal">Diario On-line</h1>
