--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -10,6 +10,15 @@
         .tituloNoticia{
           font-size: 30px;
         }
+        a:link, a:visited{
+          color: #4CAF50;
+        }
+        a:hover{
+          font-size: 1.4em;
+        }
+        a:active{
+          font-weight: bold;
+        }
     </style>
 
 </head>
