--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -2,57 +2,49 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CV Agustina Aliciardi</title>
+    <title>CV Felipe Ganame Bixquert</title>
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
-    <style>
-        body{
-            text-align: center;
-            font-family: 'Gugi', cursive;
-        }
-        div{
-            border: 2px solid #1f1bff;
-            margin: 10px;
-            padding: 5px 30px;
-        }
-        img{
-            width: 50px;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital@1&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imagenes/fav_cv.jpeg">
+    <link rel="stylesheet" href="mi_estilo.css" type="text/css">
+
 </head>
 <body>
 
 <div>
-    <img src="imagenes/icono_usuario.jpg">
-    <h1>Nombre Alumno</h1>
-    <h2>Ing. en Computacion</h2>
+    <img id="principal" src="imagenes/icono_usuario.jpg">
+    <h1>Felipe Ganame Bixquert</h1>
+    <h2>Ing. en Sistemas</h2>
 </div>
 
 <div>
     <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
+    <p><span>Fecha de Nacimiento:</span> 08/05/2003</p>
+    <p><span>Email:</span> 2111762@ucc.edu.ar</p>
 </div>
 
 <div>
     <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
+    <p><span>Carrera:</span> Ingeniería en Sistemas</p>
     <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
+    <p><span>Año de Ingreso:</span> 2021</p>
 </div>
 
 <div>
     <h3>Cursos</h3>
 
     <div>
-        <h4>Nombre Curso 1</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <h4>Laboratorio de computacion 1</h4>
+        <p><span>Lugar:</span> Universidad Catolica de Cordoba</p>
+        <p><span>Año:</span> 2021 </p>
     </div>
 
     <div>
-        <h4>Nombre Curso 2</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <h4>Laboratorio de computacion 2</h4>
+        <p><span>Lugar:</span> Univerdidad Catolica de Cordoba</p>
+        <p><span>Año:</span> 2022 </p>
     </div>
 </div>
 
